fix style, link, jump padding

--- a/asset/css/app.css
+++ b/asset/css/app.css
@@ -37,7 +37,7 @@ body {
 	#sidebar {
 	width: 280px;
     position: fixed;
-    padding: 20px;
+    padding: 20px 20px 40px;
 	top:0;
 	bottom:0;
     overflow-y: scroll;
@@ -134,7 +134,7 @@ input.searchButton {
 
 @media (min-width: 40rem) {
 	#content {
-		padding:0 30px 0 350px;
+		padding:0 30px 40px 350px;
 		margin: 0;
 	}
 }
@@ -297,6 +297,9 @@ input.searchButton {
     background-color: #AAA;
 	padding: 0 15px;
 	margin: 0 5px;
+}
+#flip a{
+    color: #FFF;
 }
 #flip div:hover {
     background-color: #444;
